finishes for now - fixed spacing issues and popover problem

--- a/style/style.css
+++ b/style/style.css
@@ -47,7 +47,7 @@ a:hover {
     margin-top: 5%;
 } */
 .last {
-    margin-bottom: 15%;
+    margin-bottom: 50%;
 }
 .spacer {
     margin-bottom: 8%;
